--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <h2>1. Configuración del Torneo</h2>
         <div id="config-form">
             <label for="max-jugadores-input">Número Total de Participantes (debe ser par):</label>
-            <input type="number" id="max-jugadores-input" min="2" step="2" value="18">
+            <input type="number" id="max-jugadores-input" min="2" step="2" value="10">
             <button onclick="configurarMaxJugadores()">Establecer</button>
+            <button onclick="borrarDatos()" class="danger-btn">Reiniciar Torneo (Borrar Datos)</button>
         </div>
-        <p>Tamaño del Torneo Establecido: <span id="max-jugadores-actual">18</span> jugadores.</p>
+        <p>Tamaño del Torneo Establecido: <span id="max-jugadores-actual">10</span> jugadores.</p>
     </section>
 
     <section id="registro">
@@ -25,7 +26,7 @@
             <input type="text" id="nombre-input" placeholder="Nombre del Jugador">
             <button onclick="agregarParticipante()">Añadir Jugador</button>
         </div>
-        <p>Participantes actuales: <span id="contador-participantes">0</span> / <span id="max-participantes-display">18</span></p>
+        <p>Participantes actuales: <span id="contador-participantes">0</span> / <span id="max-participantes-display">10</span></p>
         <ul id="lista-participantes"></ul>
         <button id="btn-iniciar" onclick="iniciarTorneo()" disabled>Iniciar Torneo</button>
     </section>
