--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Gestor de Torneo de Tenis Flexible</h1>
+    <div id="header-container">
+        <h1>Gestor de Torneo de Tenis Flexible</h1>
+        <button onclick="borrarDatos()" class="danger-btn" id="global-reset-btn">
+            Reiniciar Todo (Borrar Datos)
+        </button>
+    </div>
 
     <section id="configuracion">
         <h2>1. Configuración del Torneo</h2>
@@ -15,7 +20,6 @@
             <label for="max-jugadores-input">Número Total de Participantes (debe ser par):</label>
             <input type="number" id="max-jugadores-input" min="2" step="2" value="10">
             <button onclick="configurarMaxJugadores()">Establecer</button>
-            <button onclick="borrarDatos()" class="danger-btn">Reiniciar Torneo (Borrar Datos)</button>
         </div>
         <p>Tamaño del Torneo Establecido: <span id="max-jugadores-actual">10</span> jugadores.</p>
     </section>
