--- a/index.html
+++ b/index.html
@@ -42,20 +42,23 @@
         <div id="grupos-container">
             </div>
 
-        <h3>Registro de Resultados</h3>
-        <div id="partidos-registro">
+        <h3>Registro de Resultados de Grupos</h3>
+        <div id="partidos-registro-grupos">
             </div>
     </section>
 
     <hr>
 
     <section id="ranking-finales" style="display: none;">
-        <h2>4. Ranking y Playoffs</h2>
+        <h2>4. Rankings y Playoff</h2>
 
         <div id="rankings-container">
             </div>
+        
+        <div id="playoffs-registro">
+            <h3>Registro de Resultados de Playoff</h3>
+        </div>
 
-        <h3>Fase Final (Playoffs)</h3>
         <div id="playoffs">
             </div>
     </section>
