--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
     </section>
 
-    <script src="script.js"></script>
+    //    <script src="script.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
