--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torneo de Tenis 🎾 - Manager Flexible</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                }
+            }
+        }
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,6 +27,12 @@
     </div>
 
     <section id="configuracion">
+        <!-- Nuevo contenedor para mostrar el ID del Torneo -->
+        <div id="tournament-info-container" class="mt-4 p-3 bg-gray-100 rounded-lg shadow-inner">
+            <p class="text-sm font-semibold text-gray-700">
+                ID del Torneo (Firebase): <span id="tournament-id-display" class="font-mono text-indigo-600 break-all">Cargando...</span>
+            </p>
+        </div>
         <h2>1. Configuración del Torneo</h2>
         <div id="config-form">
             <label for="max-jugadores-input">Número Total de Participantes (debe ser par):</label>
@@ -39,6 +57,16 @@
 
     <section id="grupos-fixture" style="display: none;">
         <h2>3. Fase de Grupos y Partidos</h2>
+        <div class="mt-4 p-4 bg-purple-50 rounded-lg shadow-md">
+            <button onclick="generateTournamentAnalysis()" id="btn-gemini-analysis"
+                class="w-full bg-purple-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-purple-700 transition duration-300">
+                Generar Análisis Estratégico ✨
+            </button>
+            <div id="analysis-container" class="mt-3 text-gray-700 whitespace-pre-wrap">
+                <!-- El análisis de Gemini se insertará aquí -->
+            </div>
+            <p id="analysis-loading" class="text-purple-600 mt-2 hidden">Analizando estrategia con Gemini...</p>
+        </div>
         <div id="grupos-container">
         </div>
 
@@ -108,6 +136,19 @@
         
     <!-- Lógica principal de la aplicación -->
     <script src="my-app-logic.js"></script>
+
+    <!-- Nueva Sección para Cargar un Torneo Existente (Sincronización) -->
+    <section id="cargar-torneo" class="mt-8 p-4 bg-yellow-100 border-l-4 border-yellow-500 text-yellow-800 rounded-lg">
+        <h2>Cargar Torneo Existente 🔄</h2>
+        <p class="text-sm mb-3">Pega el ID del torneo de otro dispositivo para sincronizarlo aquí.</p>
+        <form id="load-tournament-form">
+            <input type="text" id="external-id-input" placeholder="Pegar ID del Torneo aquí" required 
+                   class="p-2 border border-yellow-500 rounded-md w-full mb-2 text-black">
+            <button type="submit" class="w-full bg-yellow-600 text-white p-2 rounded-md hover:bg-yellow-700 transition">
+                Cargar Torneo
+            </button>
+        </form>
+    </section>
     
 </body>
 </html>
