--- a/index.html
+++ b/index.html
@@ -138,17 +138,23 @@
     <script src="my-app-logic.js"></script>
 
     <!-- Nueva Sección para Cargar un Torneo Existente (Sincronización) -->
-    <section id="cargar-torneo" class="mt-8 p-4 bg-yellow-100 border-l-4 border-yellow-500 text-yellow-800 rounded-lg">
-        <h2>Cargar Torneo Existente 🔄</h2>
-        <p class="text-sm mb-3">Pega el ID del torneo de otro dispositivo para sincronizarlo aquí.</p>
+    <!-- Sección de Carga Externa que debe estar en index.html -->
+    <section id="cargar-torneo-externo" class="mt-8 p-6 bg-yellow-50 rounded-xl shadow-lg border border-yellow-200">
+        <h3 class="text-xl font-bold text-yellow-800 mb-4">Cargar Torneo Existente 🔄</h3>
         <form id="load-tournament-form">
-            <input type="text" id="external-id-input" placeholder="Pegar ID del Torneo aquí" required 
-                   class="p-2 border border-yellow-500 rounded-md w-full mb-2 text-black">
-            <button type="submit" class="w-full bg-yellow-600 text-white p-2 rounded-md hover:bg-yellow-700 transition">
+            <div class="mb-4">
+                <label for="external-id-input" class="block text-sm font-medium text-gray-700">ID del Torneo</label>
+                <input type="text" id="external-id-input" required placeholder="Pega el ID aquí (ej: nP2o3Tf6uYceS0iLed6a)"
+                       class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 p-2">
+            </div>
+            <button type="submit" 
+                    class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150">
                 Cargar Torneo
             </button>
+            <p id="load-message" class="text-center mt-2 text-sm text-red-600"></p>
         </form>
     </section>
+    
     
 </body>
 </html>
