--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <!-- Sección de Carga Externa que debe estar en index.html -->
     <section id="cargar-torneo-externo" class="mt-8 p-6 bg-yellow-50 rounded-xl shadow-lg border border-yellow-200">
         <h3 class="text-xl font-bold text-yellow-800 mb-4">Cargar Torneo Existente 🔄</h3>
+        <!-- EL ID DEL FORMULARIO Y EL INPUT SON CRÍTICOS -->
         <form id="load-tournament-form">
             <div class="mb-4">
                 <label for="external-id-input" class="block text-sm font-medium text-gray-700">ID del Torneo</label>
@@ -151,10 +152,11 @@
                     class="w-full py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition duration-150">
                 Cargar Torneo
             </button>
+            <!-- ESTA LÍNEA ES LA QUE FALTABA O TENÍA EL ID INCORRECTO -->
             <p id="load-message" class="text-center mt-2 text-sm text-red-600"></p>
         </form>
     </section>
-    
+
     
 </body>
 </html>
