Refine CSS comments and styles for Quick Win buttons
Updated CSS comments for better clarity and adjusted styles for Quick Win buttons.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>🎾 Tennis Tournament Manager</title>
     
     <style>
-        /* CSS proporcionado por el usuario, ajustado para una mejor visualización de los nuevos elementos */
+        /* Estilos CSS adaptados para los botones de Quick Win y la estructura de Sets */
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
@@ -151,8 +151,8 @@
             border-radius: 4px;
             text-align: center;
             font-size: 14px;
-            display: block; /* Asegura que tome el ancho en el div */
-            margin: 0 auto; /* Centra el input */
+            display: block; 
+            margin: 0 auto; 
         }
         
         /* Estilos para que el input y el botón rápido estén en columna */
