--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="section-card">
             <h3>Jugadores/Equipos</h3>
             <div class="input-group">
-                <label for="numPlayers">Número de Participantes:</label>
+                <label for="numPlayers">Número de Participantes/Equipos:</label>
                 <input type="number" id="numPlayers" min="2" value="8" required>
             </div>
             <div id="playerInputs" class="player-list">
@@ -44,7 +44,7 @@
         <section class="section-card">
             <h3>Estructura del Torneo</h3>
             <div class="input-group">
-                <label for="numGroups">Número de Grupos (Ej: 8 jugadores, 2 grupos):</label>
+                <label for="numGroups">Número de Grupos (Ej: 8 equipos, 2 grupos):</label>
                 <input type="number" id="numGroups" min="1" value="2" required>
             </div>
         </section>
